<resources>
    <string name="app_name">FitUp</string>
    <string name="webclient_id" translatable="false">925709693638-nm3agj53a3frj6invj8ob7tu63ot5f7r.apps.googleusercontent.com</string>
    <string name="none" translatable="false">none</string>
    <string name="back_btn">Back</string>
    <string name="next_btn">Next</string>
    <string name="null_value" translatable="false">--</string>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="type_exercise">
        <item>CHEST</item>
        <item>BACK</item>
        <item>SHOULDERS</item>
        <item>BICEPS</item>
        <item>TRICEPS</item>
        <item>ABDOMINALS</item>
        <item>OBLIQUES</item>
        <item>QUADRICEPS</item>
        <item>HAMSTRINGS</item>
        <item>GLUTES</item>
        <item>CALVES</item>
        <item>YOGA</item>
        <item>RUNNING</item>
        <item>CYCLING</item>
        <item>SWIMMING</item>
        <item>DANCING</item>
        <item>BOXING</item>
        <item>KICKBOXING</item>
    </string-array>

    <string name="facebook_app_id" translatable="false">3465451120365237</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">3693b90df68dbe71408081b07cb74f44</string>


    <!-- LOGIN -->
    <string name="welcome_title">Welcome</string>
    <string name="welcome_sub">Your fitness journey\n starts here</string>
    <string name="welcome_image" translatable="false">Welcome Image</string>
    <string name="pass_forgot">Forgot your password?</string>
    <string name="google_login_btn">Sign In With Google</string>
    <string name="facebook_login_btn">Continue With Facebook</string>
    <string name="login_btn" translatable="false">Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="login_btn_back" translatable="false">Or Login</string>
    <string name="signup_btn_back">Or Sign Up</string>
    <string name="data_please">Please insert your data for a better in-app experience</string>

    <!-- FIELDS -->
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="weight">Weight</string>
    <string name="username" translatable="false">Username</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>

    <!-- HOME -->
    <string name="welcome">Welcome,</string>
    <string name="recent_workouts">Recent Workouts</string>
    <string name="welcome_workouts">Chosen For You</string>
    <string name="popular_workouts">Most Popular</string>
    <string name="level_label" translatable="false">Lvl</string>
    <string name="strongest_stat_label" translatable="false">Ace Stat</string>
    <string name="bpm_stat_label" translatable="false">Avg. Bpm</string>
    <string name="stats_link">Stats</string>
    <string name="workouts_link">Workouts</string>
    <string name="exercises_link">Exercises</string>

    <!-- LISTS -->

    <string name="search_workouts">Search Workouts</string>
    <string name="search_exercises">Search Exercises</string>
    <string name="list_workouts_title" translatable="false">Workouts</string>
    <string name="list_exercises_title">Exercises</string>
    <string name="add_workout_title">Create Workout</string>
    <string name="add_exercise_title">Create Exercise</string>
    <string name="add_workout_hint">Workout Name</string>
    <string name="add_exercise_hint">Exercise Name</string>
    <string name="exercise_type_hint">Type</string>
    <string name="add_confirm">Add</string>
    <string name="workout_list_exercises_title">Exercises</string>
    <string name="exp_exercises_label" translatable="false">Exp</string>
    <string name="experience_reps_label" translatable="false">Exp/Rep</string>
    <string name="calories_reps_label" translatable="false">Kcal/Rep</string>

    <!-- WORKOUT DETAIL -->
    <string name="missing" translatable="false">--</string>
    <string name="number_exercises_label" translatable="false">Exp</string>
    <string name="calories_data_label" translatable="false">Kcal</string>
    <string name="bpm_data_label" translatable="false">BPM</string>
    <string name="sets_label">Sets</string>
    <string name="reps_label">Reps</string>
    <string name="rest_label">Rest</string>
    <string name="weight_label" translatable="false">Kg</string>
    <string name="buffer_label" translatable="false">Buffer</string>
    <string name="add_exercises_please">Let\'s start building your workout</string>
    <string name="add_exercises_please_btn">Add to this workout</string>
    <string name="owner_label">By</string>

    <!-- SETTINGS -->
    <string name="settings_title">Settings</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="profile_header">Profile</string>
    <string name="app_header" translatable="false">General</string>

    <!-- Messages Preferences -->
    <string name="change_nick">Change nickname</string>
    <string name="logout">Logout</string>

    <!-- Logout Pop Up -->
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="confirm_logout_yes">Yes</string>
    <string name="confirm_logout_no">No</string>

    <!-- Sync Preferences -->
    <string name="language">Choose your language</string>

    <!-- MENUS -->
    <!-- Exercise Menu -->
    <string name="modify_exercise">Modify</string>
    <string name="delete_exercise">Delete</string>
    <!-- Workout Menu -->
    <string name="modify_workout">Modify</string>
    <string name="delete_workout">Delete</string>
    <!-- Add Exercise To Workout Menu -->
    <string name="add_exercise_label">Add Exercise</string>
    <string name="exercise_label">Exercise:</string>
    <string name="type_label">Type</string>
    <string name="calories_label" translatable="false">Kcal</string>

    <!-- PLAY -->
    <string name="start_button">Start</string>
    <string name="stop_button" translatable="false">Stop</string>
    <string name="missing_time" translatable="false">00:00:00</string>
    <string name="exp_label" translatable="false">Exp:</string>
    <string name="next_up_label">Next Up:</string>
    <string name="current_exercise_label">Current Exercise</string>
    <string name="begin_exercise_button">Begin</string>
    <string name="next_up_button">Next</string>
    <string name="spotify_button_label" translatable="false">Spotify</string>
    <string name="wearos_button_label">Sync</string>
    <string name="courage_text">Defeat The Monster</string>
    <string name="popup">Are you sure you want to end the workout?</string>
    <string name="congrats">Congratulations!\n You defeated the monster!</string>
    <string name="ready">Ready</string>
    <string name="set">Set</string>
    <string name="go">Go!</string>
    <string name="workout_start_text">Workout\n starts in</string>
    <string name="play_spotify">Play</string>
    <string name="stop_button_text">Finish Workout</string>

    <!-- FINISH -->
    <string name="congrats_main">You\'ve Done It!</string>
    <string name="congrats_sub">Now stretch, relax and enjoy the rest of your day</string>
    <string name="recap_exp">Total Exp:</string>
    <string name="recap_time">Final Time:</string>
    <string name="recap_number_ex">Exercises</string>

    <!-- STATS -->
    <string name="latest_label">Latest</string>
    <string name="diff_label" translatable="false">+/-</string>
    <string name="new_value">Value</string>
    <string name="orm">One Rep Max</string>
    <string name="body_comp">Body Composition</string>
    <string name="add_data_title">Add Data</string>
    <string name="add_data_value_label" translatable="false">--</string>
    <string name="add_data_date_label">Date</string>
    <string name="add_data_please">Let\'s start tracking</string>
    <string name="add_data_please_btn">Add to this graph</string>

    <!-- RESET -->
    <string name="reset_label">Reset Your Password</string>
    <string name="confirm_label">Confirm Email</string>
    <string name="reset_btn" translatable="false">Reset</string>

    <!-- ACHIEVEMENTS DETAIL -->
    <string name="achievements_title" translatable="false">Achievements</string>
    <string name="completed_label">Completed</string>

    <!-- TIME -->
    <string name="global_time" translatable="false">00:00:00</string>
    <string name="exercise_time" translatable="false">00:00</string>

</resources>