<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@null">

    <PreferenceCategory app:title="@string/profile_header">

        <EditTextPreference
            android:key="username"
            android:title="Username"
            android:dialogTitle="Type a new Username"
            android:summary="%s"
            android:inputType="text"
            android:maxLength="20" />
        <EditTextPreference
            android:defaultValue="Default value"
            android:key="logout"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/logout" />
onPause
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_header">

        <ListPreference
            app:defaultValue="English"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>