<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:context=".WorkoutEndActivity">

    <LinearLayout
        android:id="@+id/congratsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="75dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/congratsMainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/congrats_main"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="?colorOnPrimary"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/congratsSubText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/lato"
            android:text="@string/congrats_sub"
            android:textAlignment="center"
            android:textColor="?colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recapLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratsLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/expRecapLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/lato"
                android:text="@string/recap_exp"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/expRecapValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/lato"
                android:foregroundGravity="right"
                android:gravity="end"
                android:text="@string/missing"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeRecapLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/lato"
                android:text="@string/recap_time"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/timeRecapValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/lato"
                android:foregroundGravity="right"
                android:gravity="end"
                android:text="@string/missing"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exercisesRecapLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/lato"
                android:text="@string/recap_number_ex"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/exercisesRecapValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/lato"
                android:foregroundGravity="right"
                android:gravity="end"
                android:text="@string/missing"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/congratsImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/none"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/undraw_walking_outside_re_56xo" />
</androidx.constraintlayout.widget.ConstraintLayout>