<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    android:minWidth="0dp"
    android:minHeight="0dp"
    tools:context=".SignInActivity">


    <TextView
        android:id="@+id/welcomesub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/reset_label"
        android:textAlignment="center"
        android:textColor="?colorOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcometitle2" />

    <TextView
        android:id="@+id/welcometitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="75dp"
        android:layout_weight="1"
        android:fontFamily="@font/open_sans_bold"
        android:letterSpacing="0.2"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?colorOnPrimary"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcometitle2">


        <EditText
            android:id="@+id/resetEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:autofillHints=""
            android:ems="15"
            android:fontFamily="@font/lato"
            android:foreground="?attr/selectableItemBackground"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxEms="15"
            android:minHeight="48dp"
            android:textAlignment="viewStart"
            android:textColor="?colorOnPrimary"
            android:textColorHint="?colorOnPrimary" />

        <EditText
            android:id="@+id/confirmEmailResetField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:ems="15"
            android:fontFamily="@font/lato"
            android:foreground="?attr/selectableItemBackground"
            android:hint="@string/confirm_label"
            android:inputType="textPassword|textEmailAddress"
            android:maxEms="15"
            android:minHeight="48dp"
            android:textAlignment="viewStart"
            android:textColor="?colorOnPrimary"
            android:textColorHint="?colorOnPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/resetBtn"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="?colorPrimary"
            android:fontFamily="@font/lato"
            android:foreground="?attr/selectableItemBackground"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="53dp"
            android:stateListAnimator="@null"
            android:text="@string/reset_btn"
            android:textColor="?colorOnPrimary"
            android:textSize="17sp"
            android:textStyle="bold"
            app:rippleColor="@null" />

        <Button
            android:id="@+id/loginResetBtn"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@android:color/transparent"
            android:elevation="0dp"
            android:fontFamily="@font/lato"
            android:foreground="?attr/selectableItemBackground"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="53dp"
            android:stateListAnimator="@null"
            android:text="@string/login_btn_back"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@null" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>